--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,4 @@
-[package]
-name = "wasm-dl"
-version = "0.1.0"
-authors = ["JorianWoltjer <26067369+JorianWoltjer@users.noreply.github.com>"]
-edition = "2018"
 
-[lib]
-crate-type = ["cdylib", "rlib"]
+[workspace]
 
-[features]
-default = ["console_error_panic_hook"]
-
-[dependencies]
-wasm-bindgen = "0.2.84"
-
-# The `console_error_panic_hook` crate provides better debugging of panics by
-# logging them with `console.error`. This is great for development, but requires
-# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
-# code size when deploying.
-console_error_panic_hook = { version = "0.1.7", optional = true }
-
-[dev-dependencies]
-wasm-bindgen-test = "0.3.34"
-
-[profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
+members = ["frontend", "backend"]
