Make it a proxy

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2024"
 [dependencies]
 aes-gcm = "0.10.3"
 argon2 = "0.5.3"
-axum = { version = "0.7.9", features = ["tokio"] }
+axum = { version = "0.7.9", features = ["macros", "tokio"] }
+base64 = "0.22.1"
 futures-util = "0.3.31"
+http = "1.1.0"
 reqwest = { version = "0.12.9", features = ["stream"] }
 serde = { version = "1.0.215", features = ["derive"] }
 tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
