--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,6 +10,8 @@ axum = { version = "0.7.9", features = ["macros", "tokio"] }
 base64 = "0.22.1"
 futures-util = "0.3.31"
 http = "1.1.0"
+lazy_static = "1.5.0"
+regex = "1.11.1"
 reqwest = { version = "0.12.9", features = ["stream"] }
 serde = { version = "1.0.215", features = ["derive"] }
 tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
