--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 aes-gcm = "0.10.3"
 argon2 = "0.5.3"
 axum = { version = "0.7.9", features = ["macros", "tokio"] }
+axum-extra = "0.9.6"
 base64 = "0.22.1"
 futures-util = "0.3.31"
 http = "1.1.0"
