--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 axum = { version = "0.7.9", features = ["macros", "tokio"] }
 axum-extra = "0.9.6"
 base64 = "0.22.1"
-futures-util = "0.3.31"
+futures-util = { version = "0.3.31", features = ["sink"] }
 http = "1.1.0"
 lazy_static = "1.5.0"
 regex = "1.11.1"
@@ -15,6 +15,6 @@ reqwest = { version = "0.12.9", features = ["stream"] }
 serde = { version = "1.0.215", features = ["derive"] }
 tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.16"
-tokio-util = "0.7.12"
+tokio-util = { version = "0.7.12", features = ["codec"] }
 tower-http = { version = "0.6.2", features = ["fs"] }
 crypto = { path = "../crypto" }
