--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -20,7 +20,7 @@ web-sys = { version = "0.3.74", features = [
 console_error_panic_hook = { version = "0.1.7", optional = true }
 wasm-bindgen-futures = "0.4.47"
 tokio = { version = "1.41.1", features = ["io-util", "rt"] }
-tokio-util = { version = "0.7.12", features = ["io"] }
+tokio-util = { version = "0.7.12", features = ["codec", "io"] }
 futures = "0.3.31"
 wasm-streams = "0.4.2"
 crypto = { path = "../crypto" }
