Add request encryption

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 
-members = ["frontend", "backend", "crypto"]
+members = ["frontend", "backend", "shared"]
 
 [profile.release.package.frontend]
 # Tell `rustc` to optimize for small code size.
