--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,4 +17,5 @@ tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.16"
 tokio-util = { version = "0.7.12", features = ["codec"] }
 tower-http = { version = "0.6.2", features = ["fs"] }
-crypto = { path = "../crypto" }
+shared = { path = "../shared" }
+bincode = "1.3.3"
