--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -23,4 +23,5 @@ tokio = { version = "1.41.1", features = ["io-util", "rt"] }
 tokio-util = { version = "0.7.12", features = ["codec", "io"] }
 futures = "0.3.31"
 wasm-streams = "0.4.2"
-crypto = { path = "../crypto" }
+shared = { path = "../shared" }
+bincode = "1.3.3"
