--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "crypto"
+name = "shared"
 version = "0.1.0"
 edition = "2024"
 
@@ -9,3 +9,4 @@ tokio-util = { version = "0.7.12", features = ["io"] }
 argon2 = "0.5.3"
 getrandom = { version = "0.2.15", features = ["js"] }
 aes-gcm = "0.10.3"
+serde = { version = "1.0.215", features = ["derive"] }
