--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -19,3 +19,4 @@ tokio-util = { version = "0.7.12", features = ["codec"] }
 tower-http = { version = "0.6.2", features = ["fs"] }
 shared = { path = "../shared" }
 bincode = "1.3.3"
+sha256 = "1.5.0"
