--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,5 +18,5 @@ tokio-stream = "0.1.16"
 tokio-util = { version = "0.7.12", features = ["codec"] }
 tower-http = { version = "0.6.2", features = ["fs"] }
 shared = { path = "../shared" }
-bincode = "1.3.3"
 sha256 = "1.5.0"
+rmp-serde = "1.3.0"
