--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,12 +6,17 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.7.9", features = ["macros", "tokio"] }
 axum-extra = "0.9.6"
-base64 = "0.22.1"
 futures-util = { version = "0.3.31", features = ["sink"] }
 http = "1.1.0"
 lazy_static = "1.5.0"
 regex = "1.11.1"
-reqwest = { version = "0.12.9", features = ["stream"] }
+reqwest = { version = "0.12.9", features = [
+    "stream",
+    "gzip",
+    "brotli",
+    "zstd",
+    "deflate",
+] }
 serde = { version = "1.0.215", features = ["derive"] }
 tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
 tokio-stream = "0.1.16"
